model update and re-traning

--- a/model.ipynb
+++ b/model.ipynb
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.26057681517226 % of accurate.\n"
+      "98.30375196585037 % of accurate.\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
